--- a/LabaidKioskMachine/ControlLanguage.resx
+++ b/LabaidKioskMachine/ControlLanguage.resx
@@ -117,35 +117,45 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="topn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\topn.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnEnglish.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAABXCAYAAABBaAoIAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM6SURBVHhe7dqxSpVxGMdxR0dHx8ZGL8FLaOwSGr0Dx8ZG
+        L6E9lUQIcdEhQghEJEKXkCAUEVEEeXr+vm/q2+85ckZ9f98PfKF+dE7LeTrqaWYmVoOIJlSORNRVjkTU
+        VY5E1FWORNRVjkTUVY5E1FWORNRVjkSjb63Yispx0JRPRDTGyvGJFmI7luMwtuLPXWdxE8BzdRW396/V
+        lTiOxdgpX9cTK8ei9sTtLwFeuqO4jDfxtXidf9JNhqJ2ecDYtH/w52KjfM3fp+Pwe47P8bt/OmB8DuIi
+        5mNz8JofVI59vHPAwW6cxmyslzcw8UDa12iAi6XYL+9g4oHsxXn/UGD8TuK6fheRIWs/sQLcvIvvcgvl
+        gbyPH/1DAB/tp1pyDzJkfN4BR+1Db7kHGbL2QQrgSL4PGfymr308Dzia6kAAV3IPMmSAK7kHGTLAldyD
+        DBngSu5BhgxwJfcgQwa4knuQIQNcyT3IkAGu5B5kyABXcg8yZIAruQcZMsCV3IMMGeBK7kGGDHAl9yBD
+        BriSe5AhA1zJPciQAa7kHmTIAFdyDzJkgCu5BxkywJXcgwwZ4EruQYYMcCX3IEMGuJJ7kCEDXMk9yJAB
+        ruQeZMgAV3IPMmSAK7kHGTLAldyDDBngSu5BhgxwJfcgQwa4knuQIQNcyT3IkAGu5B5kyABXcg8yZIAr
+        uQcZMsCV3IMMGeBK7kGGDHAl9yBDBriSe5AhA1zJPciQAa7kHmTIAFdyDzJkgCu5BxkywJXcgwwZ4Eru
+        QYYMcCX3IEN2FJf9Hwe8zMXG8B4Gv+nbjdP+jwM+ruJWbqE8kI/xq38I4GMvzuUWygN5G9/6hwA+luNQ
+        bqE8kNlYj5O47h8GeFiIbbmF8kBaS7HfPwwYv5U4Lu9g4oG0d5H2NRkwdmdxE/Ox+ej1v/bw64dRexVf
+        +FILo7cYO+Xr/65yfNTr2IqDuOifChiP9s7x5HG0yvG/2ocnH+Ln3c+JgTFoH2UMv6xqPfrS6l8yPFF7
+        wvajMN5R8BK1/yHS/qEvf1pVHUerHKdML5Do+dW+l672qSpHIosmvGs8rhyJqKsciairHImoqxyJqKsc
+        iairHImoqxyJKFuNv5HqDAyPca/lAAAAAElFTkSuQmCC
+</value>
   </data>
-  <data name="bookreviewstars" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bookreviewstars.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Customer Comments, English222" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Customer Comments, English222.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="left-arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\left-arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="back-left-arrow-circular-button-outline" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\back-left-arrow-circular-button-outline.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="back" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="home-icon-silhouette" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\home-icon-silhouette.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="DocTab" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\DocTab.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="LanguageBackGround" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\LanguageBackGround.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="left-arrow(1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\left-arrow(1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnBangla.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMYAAABZCAYAAABlq1vLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANGSURBVHhe7drBStRhFIZxly5dumzZ0kvwElp2CS29A5ct
+        W3oJ7VNJhBA3uogQAhGJ0E1IEIqIKIKczif/dKb3jMzS+d7nBw/USzNt5jTqNDcX60FE/1WORO6VI5F7
+        5UjkXjkSuVeORO6VI5F75UjkXjkSddtGsRWV41hTPhFRT5XjMy3FbqzGcezEn4cu4i6Al+Ym7h9fo2tx
+        GsuxV76eJ1aORe2J218CzKqTuI438bV4fX/STYaidnFAL9o/8AuxVb7WH9Nx/HuKz/F7eDqgH0dxFYux
+        PfZaH6sch3inQM/24zzmY7N87U88jPa1GNC7lTgsX/8TD+MgLoeHAv06i9v6XUOGrP0ECnDxLr7LDZSH
+        8T5+DA8B+td+SiV3IEPG5xVw0j6kljuQIWsfhABO5PuMsd8MtY/TASdTHQbgRu5AhgxwI3cgQwa4kTuQ
+        IQPcyB3IkAFu5A5kyAA3cgcyZIAbuQMZMsCN3IEMGeBG7kCGDHAjdyBDBriRO5AhA9zIHciQAW7kDmTI
+        ADdyBzJkgBu5AxkywI3cgQwZ4EbuQIYMcCN3IEMGuJE7kCED3MgdyJABbuQOZMgAN3IHMmSAG7kDGTLA
+        jdyBDBngRu5AhgxwI3cgQwa4kTuQIQPcyB3IkAFu5A5kyAA3cgcyZIAbuQMZMsCN3IEMGeBG7kCGDHAj
+        dyBDBriRO5AhA9zIHciQAW7kDmTIADdyBzJkgBu5AxkywI3cgQwZ4EbuQIYMcCN3IEMGuJE7kCED3Mgd
+        yJABbuQOZMgAN3IHMmSAG7kDGbKTuB7+OOBhIbbG72DsN0P7cT78caB/N3EvN1Aexsf4NTwE6N9BXMoN
+        lIfxNr4NDwH6txrHcgPlYczHZpzF7fAwoG9LsSs3UB5GayUOh4cB/VqL0/L1P/Ew2rtG+9oL6NVF3MVi
+        bI+87jeefv00aq/iC19SoVvLsVe+7h8qx5Fex04cxdXwVMDsa+8Uzx5Fqxz/q3348SF+Pvy8F5hl7aOI
+        8S+fWiNfQv1LhmdqT9h+tMU7CGZJ+58c7R/28qdP1VG0ynHK9PKIXk7te+Rqn6pyJOq6Ce8So5UjkXvl
+        SOReORK5V45E7pUjkXvlSOReORJZtx5/Adcqmp2WgdRIAAAAAElFTkSuQmCC
+</value>
   </data>
 </root>
