--- a/LabaidKioskMachine/ControlUserInfo.resx
+++ b/LabaidKioskMachine/ControlUserInfo.resx
@@ -117,35 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="topn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\topn.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bookreviewstars" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bookreviewstars.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Customer Comments, English222" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Customer Comments, English222.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="left-arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\left-arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="back-left-arrow-circular-button-outline" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\back-left-arrow-circular-button-outline.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="back" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="home-icon-silhouette" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\home-icon-silhouette.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="DocTab" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\DocTab.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="LanguageBackGround" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\LanguageBackGround.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="left-arrow(1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\left-arrow(1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="AddUserBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJ0AAABCCAYAAABNTtQsAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJlSURBVHhe7d2tS2RRHMbx/Ytsm2wm2yaxmDSIsEGLFg0m
+        gwurGyYIBoMiaBgwmAQRBdEgiyyKQWFhgoooYhANR57jnIuXefGFOU/6fuDCMOqkL+ecO8L9fQuAGdHB
+        juhgR3SwIzrYER3s2kb3+PwUNk/2wvjGfBhanQ69Cz9D12w/F1fDpTbUyGj1V6geb4f7x4d6RY1aRrd7
+        fhQ/SMEpvMP//0Lt7qr+U6BMbaiRrbODMLVZie0ovmYaolOh+qOR9Zlw/XBbfxf4nHYdlaLTL/YtTbQs
+        FPgs7ZgDy5OlXbIUncokOHSatl2d95IiOhWppRDIYW5nJSzuV+PrGJ3uUnXw4wyHXNSYjm7nN7XX6LSl
+        amsFctJKpxUvRqfvVnSrC+R0enkRV7sY3Y/FsbjsATlpi/3+e+A1uu4/g22/QQY6Rf+9iNHpBeBAdLAj
+        OtgRHeyIDnZEBzuigx3RwY7oYEd0sCM62BEd7IgOdkQHO6KDHdHBjuhgR3SwIzrYER3siA52RAc7ooMd
+        0cGO6GBHdLAjOtgRHeyIDnZEBzuigx3RwY7oYFdEp0dy6tGcQG5FdHqcP3O/4FBEp6ElGl4C5KSHqeuh
+        6jG69Hx/IKc0ryRGp61VBXKuQ05pXkmMTip7a/ECckjDqqWITqucJtX9rZ3V3wE6QzPntJOmWSVFdKKD
+        XhoaBnSCgtNipvGbSSk60Uqn8NKYROCrdH7TCvc2OGmITrTV6m5WheqOg5Gc+Chtoen8phuHZuO/mkaX
+        qFDd4vZUhuOXelxc712aM6fgFF4rbaMDciA62BEd7IgOdkQHsxBeACVBV94UOn52AAAAAElFTkSuQmCC
+</value>
   </data>
 </root>
