--- a/LabaidKioskMachine/ControlUserInfoBn.resx
+++ b/LabaidKioskMachine/ControlUserInfoBn.resx
@@ -117,35 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="topn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\topn.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bookreviewstars" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bookreviewstars.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Customer Comments, English222" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Customer Comments, English222.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="left-arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\left-arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="back-left-arrow-circular-button-outline" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\back-left-arrow-circular-button-outline.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="back" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="home-icon-silhouette" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\home-icon-silhouette.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="DocTab" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\DocTab.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="LanguageBackGround" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\LanguageBackGround.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="left-arrow(1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\left-arrow(1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="AddUserBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAI8AAABCCAYAAABuFYX5AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJcSURBVHhe7d2vS6RBAMZx/yKbyWaymcRi0nAIBi1azmAy
+        KNxp2CBsMCiChgWDSRBRkLsgIodiUBA2qIgiBtEwxzPuvPi6u6+vT3S/H3hhWX+U98vMvG+Y6QqAiXhg
+        Ix7YiAc24oGNeGArjOf59SVsnx6Eqa3FMLo+G/qXx0P3/BDXN750j3WvJ2oLoXayGx6fnxo1NGsbz/7F
+        UfxHCkcB/b36F+oPN42f4rvSPda93jn/E2a2K7EBRdRKUzwqTX80tjkXbp/uG9+iUxX1kItHvzi4Mt22
+        NHQuzUTDqz9zs08uHhVGOGhH05nWQ0kWj8rS0AQU+b23FqqHtfg5xqOnKi2MWOPgM2pFS5uLu/pbPJqq
+        NGUBZWjk0QgU49EzvR7NgDLOri/j6BPjGahOxmEIKENTV8+v4bd4epdGCt8kAh/pbXSMRx+AryAe2IgH
+        NuKBjXhgIx7YiAc24oGNeGAjHtiIBzbigY14YCMe2IgHNuKBjXhgIx7YiAc24oGNeGAjHtiIBzbigY14
+        YCMe2IgHNuKBjXhgIx7YiAc24oGNeGDL4tEWYdoqDCgri0fb6HKuBL4ii0ebd2sTb6AMbX6qTVBjPGlf
+        XaCMtG93jEdTlkpi3YMy0r7dMR6pHGzECyiSDu+TLB6NOjrR5Lh+3vgGyNPZJJqh0p7dWTyihVA6lAJ4
+        T+FocNGxSUkuHtHIo4DSsTiA1jcacd6HI03xiKYwPX2pNK2sOUqp82hqSusbLZBbHS/RMp5EpemRrK/y
+        I74U4uqcS+eRpMOJ2ymMByhCPLARD2zEAxvxwBTCf109K2hr9XQDAAAAAElFTkSuQmCC
+</value>
   </data>
 </root>
